2004-06-24  John Luke  <jluke@cfl.rr.com>

	fix all the projects and generated makefiles
	(add/remove needed files, add refs)

2004-06-23  Todd Berman  <tberman@off.net>

	* *.cs: Lots of changes to reflect the ServiceManager change.

2004-06-18  Todd Berman  <tberman@off.net>

	* configure.in: change how we reference the debugger stuff, to make
	it a bit saner. Also cleanup (by making dirtier) the PKG check stuff.

2004-06-14  Francisco "Paco" Martinez <paco@mfcon.com>
	
	* monodevelop.in: 
	added a missing space before an enclosing square bracket

2004-06-14  Peter Johanson <latexer@gentoo.org>

	* build/AddIns/SharpDevelopCore.addin.xml:
	* build/AddIns/MonoDevelopNewEditor.addin.xml:
	add mnemonics to many of the menu items.

2004-06-12  Martin Baulig  <martin@ximian.com>

	* configure.in: Reenable the debugger.

2004-06-11  Todd Berman  <tberman@sevenl.net>

	* monodevelop.in: dont ask me how that worked. as i dont know. this
	should.

2004-06-11  Todd Berman  <tberman@sevenl.net>

	* configure.in: grab gtk-sharp prefix.
	* monodevelop.in: add the gtk-sharp prefix for assembly ref issues.
	attempt to be smart, etc.

2004-06-10 John Bouantoun (jba-mono@optusnet.com.au)
	* Numerous *.prjx in MonoDevelop solution: Changed them to not
	search folders for new files on load.

2004-06-08 Iain McCoy <iain@mccoy.id.au>

	* Makefile.am: don't clobber LD_LIBRARY_PATH in the make run target

2004-06-07  John Luke  <jluke@cfl.rr.com>

	* monodevelop.in: patch from Michael Levy <mlevy@wardium.homeip.net>
	to handle relative files in the command line.

2004-06-02  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* AUTHORS: Added Atsushi, Martin, Antonio, Andre & Maurício who 
	made translations.
	* src/Main/Base/Gui/Dialogs/CommonAboutDialog.cs: Ditto

2004-06-02  Jeroen Zwartepoorte  <jeroen@xs4all.nl>

	* src/AddIns/DisplayBindings/SourceEditor/Gui/Dialogs/
	ExportProjectToHtmlDialog.cs:
	* src/AddIns/DisplayBindings/SourceEditor/Gui/SourceEditorBuffer.cs: