@@ -36,6 +36,7 @@
     <Reference type="Project" refto="SharpRefactory" localcopy="True" />
     <Reference type="Project" refto="MonoDevelop.Gui.Widgets" localcopy="True" />
     <Reference type="Gac" refto="gtk-sharp, Version=1.0.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" localcopy="True" />
+    <Reference type="Project" refto="SharpAssembly" localcopy="True" />
   </References>
   <DeploymentInformation target="" script="" strategy="File" />
   <Configuration runwithwarnings="False" name="Debug">
