@@ -13,6 +13,7 @@
     <File name="./prj2make-sharp-lib.addin.xml" subtype="Code" buildaction="Exclude" dependson="" data="" />
     <File name="./sharp_d_cmbx.cs" subtype="Code" buildaction="Compile" dependson="" data="" />
     <File name="./sharp_d_prjx.cs" subtype="Code" buildaction="Compile" dependson="" data="" />
+    <File name="./pkgconfiginvoker.cs" subtype="Code" buildaction="Compile" dependson="" data="" />
   </Contents>
   <References>
     <Reference type="Gac" refto="System.Xml, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" localcopy="True" />
@@ -23,6 +24,7 @@
     <Reference type="Gac" refto="pango-sharp, Version=1.0.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" localcopy="True" />
     <Reference type="Project" refto="MonoDevelop.Core" localcopy="True" />
     <Reference type="Project" refto="MonoDevelop.Base" localcopy="True" />
+    <Reference type="Project" refto="MonoDevelop.Gui.Widgets" localcopy="True" />
   </References>
   <DeploymentInformation target="" script="" strategy="File" />
   <Configuration runwithwarnings="False" name="Debug">
