@@ -1,0 +1,16 @@
+// created on 6/24/2004 at 7:43 PM
+
+using System;
+using System.Collections;
+using Gtk;
+
+namespace Gdl
+{
+	// stub so I can compile in MD
+	public class DockBar : Widget // maybe not really
+	{
+		public DockBar (Dock dock)
+		{
+		}
+	}
+}
