@@ -8,7 +8,8 @@ SOURCES = \
 ./Dialogs/ExceptionBox.cs
 
 PKG_REFERENCES = \
-gtk-sharp
+gtk-sharp \
+gnome-sharp
 
 PKG_REFERENCES_BUILD = $(addprefix -pkg:, $(PKG_REFERENCES))
 
