@@ -3,6 +3,9 @@
 	fix all the projects and generated makefiles
 	(add/remove needed files, add refs)
 
+	stub Gdl.DockBar and Gdl.DockLayout to compile
+	and more projects/other trivial fixes
+
 2004-06-23  Todd Berman  <tberman@off.net>
 
 	* *.cs: Lots of changes to reflect the ServiceManager change.
